packages/jsii/test/negatives/neg.enum-name.1.ts
export enum myEnum {
  FOO,
  GOO,
}
